add site credit

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer>
   <div class="row">
     <div class="col-md-6 col-sm-6 hidden-xs">
-      <span class="left">Sodbury Challenge <%= Date.current.year %></span>
+      <span class="left">Sodbury Challenge <%= Date.current.year %> | &copy DS &amp JC</span>
     </div>
     <div class="col-md-6 col-sm-6 hidden-xs">
       <nav>
@@ -13,7 +13,7 @@
       </nav>
     </div>
     <div class="visible-xs-block col-xs-12 vspace center">
-      <span>Sodbury Challenge <%= Date.current.year %></span>
+      <span>Sodbury Challenge <%= Date.current.year %> | &copy DS &amp JC</span>
     </div>
     <div class="visible-xs-block col-xs-12 vspace center">
       <%= link_to "Home", root_path %>&nbsp;&nbsp;&nbsp;
