--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -20,38 +20,8 @@
   </div>
 </div>
 
-<% count = 1 %>
-<% @challenges.order(:time_allowed).each do |challenge| %>
-<div class="row vspace">
-  <div class="col-md-12">
-    <h3><%= challenge.time_allowed %> Hour Challenge</h3>
-  </div>
-</div>
-<div class="row">
-  <div class="col-md-12">
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th>Team Number</th>
-          <th>Name</th>
-          <th>Group</th>
-          <th>Start Time</th>
-          <th>Finish Time</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% challenge.teams.order(:nominal_start_time).each do |team| %>
-          <tr>
-            <td><%= count %></td>
-            <td><%= team.name %></td>
-            <td><%= team.group.to_s.titleize %></td>
-            <td><%= start_time(team) %></td>
-            <td><%= finish_time(team) %></td>
-          </tr>
-          <% count += 1 %>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
-</div>
+<% if logged_in? %>
+  <%= render "private_index" %>
+<% else %>
+  <%= render "public_index" %>
 <% end %>
