--- a/app/views/static_pages/_public_index.html.erb
+++ b/app/views/static_pages/_public_index.html.erb
@@ -1,3 +1,25 @@
+<div class="jumbotron center">
+  <h1>Official Start Times</h1>
+  <br />
+  <p>Please arrive 45 minutes before your start time for check-in, inspection
+     and route planning.</p>
+</div>
+<div class="row">
+  <div class="col-md-12">
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h4 class="panel-title">Please Note</h4>
+      </div>
+      <div class="panel-body">
+        <h4>
+          The actual finish time could be up to 30 minutes after the expected finish
+          time. All times are subject to change.
+        </h4>
+      </div>
+    </div>
+  </div>
+</div>
+
 <% count = 1 %>
 <% @challenges.order(:time_allowed).each do |challenge| %>
 <div class="row vspace">
