--- a/app/views/static_pages/_public_index.html.erb
+++ b/app/views/static_pages/_public_index.html.erb
@@ -45,7 +45,7 @@
             <td><%= count %></td>
             <td><%= team.name %></td>
             <td><%= team.group.to_s.titleize %></td>
-            <td><%= start_time(team) %></td>
+            <td><%= team.nominal_start_time %></td>
             <td><%= finish_time(team) %></td>
           </tr>
           <% count += 1 %>
