--- a/app/views/static_pages/_public_index.html.erb
+++ b/app/views/static_pages/_public_index.html.erb
@@ -40,12 +40,12 @@
         </tr>
       </thead>
       <tbody>
-        <% challenge.teams.order(:nominal_start_time).each do |team| %>
+        <% challenge.teams.order(:planned_start_time).each do |team| %>
           <tr>
             <td><%= count %></td>
             <td><%= team.name %></td>
             <td><%= team.group.to_s.titleize %></td>
-            <td><%= team.nominal_start_time %></td>
+            <td><%= team.planned_start_time %></td>
             <td><%= finish_time(team) %></td>
           </tr>
           <% count += 1 %>
