--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -26,7 +26,7 @@
         </tr>
       </thead>
       <tbody>
-        <% challenge.teams.order(:nominal_start_time).each do |team| %>
+        <% challenge.teams.order(:planned_start_time).each do |team| %>
           <tr>
             <td><%= count %></td>
             <td><%= team.name %></td>
