--- a/app/assets/stylesheets/teams.scss
+++ b/app/assets/stylesheets/teams.scss
@@ -1,4 +1,14 @@
 .expected {
   color: #999;
   font-style: italic;
+  a {
+    &,
+    &:link,
+    &:visited {
+      color: #999;
+    }
+    &:hover {
+      color: #666;
+    }
+  }
 }
