--- a/app/views/static_pages/_public_index.html.erb
+++ b/app/views/static_pages/_public_index.html.erb
@@ -13,7 +13,7 @@
       <div class="panel-body">
         <h4>
           The actual finish time could be up to 30 minutes after the expected finish
-          time. All times are subject to change.
+          time. All times are subject to change. Start times will be updated live during the night.
         </h4>
       </div>
     </div>
