Update public view table columns

--- a/app/views/static_pages/_public_index.html.erb
+++ b/app/views/static_pages/_public_index.html.erb
@@ -35,8 +35,8 @@
           <th>Team Number</th>
           <th>Name</th>
           <th>Group</th>
-          <th>Start Time</th>
-          <th>Finish Time</th>
+          <th>Planned Start Time</th>
+          <th>Expected Finish Time</th>
         </tr>
       </thead>
       <tbody>
