--- a/app/views/static_pages/_public_index.html.erb
+++ b/app/views/static_pages/_public_index.html.erb
@@ -12,8 +12,10 @@
       </div>
       <div class="panel-body">
         <h4>
-          The actual finish time could be up to 30 minutes after the expected finish
-          time. All times are subject to change. Start times will be updated live during the night.
+          <li>The actual finish time could be up to 30 minutes after the expected finish
+          time.</li>
+          <br />
+          <li>Expected finish times will update as teams start on the course.</li>
         </h4>
       </div>
     </div>
