--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -16,8 +16,8 @@
       </nav>
     </div>
     <div class="visible-xs-block col-xs-12 vspace center">
-      <%= link_to "Home", root_path %>&nbsp;&nbsp;&nbsp;
-      <%= link_to "About", about_path %>&nbsp;&nbsp;&nbsp;
+      <%= link_to "Home", root_path %>
+      <%= link_to "About", about_path %>
       <%= link_to "Rules", rules_path %>
     </div>
     <div class="visible-xs-block col-xs-12 vspace center">
