Correct closing div

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,5 +2,5 @@
   <div class="row">
     <div class="col-xs-8"><p>Sodbury Challenge <%= Date.current.year %> &copy <a href="http://danielswaine.co.uk/">Daniel Swaine</a> &amp <a href="https://www.joecridge.me/">Joe Cridge</a></p></div>
     <div class="col-xs-4 right"><p class="right"><a href="https://raw.githubusercontent.com/danielswaine/SodburyChallenge/master/LICENSE">GPLv3</a> | <a href="https://github.com/danielswaine/SodburyChallenge">Source</a></p></div>
-  <div class="row">
+  <div>
 </footer>
