--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   </head>
   <body>
     <%= render 'layouts/header' %>
-    <div class="container-fluid">
+    <div class="container">
       <% flash.each do |message_type, message| %>
         <div class="row vspace">
           <div class="col-md-12">
