--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -9,12 +9,12 @@
 <% count = 1 %>
 <% @challenges.order(:time_allowed).each do |challenge| %>
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-12 col-xs-12">
     <h3><%= challenge.time_allowed %> Hour Challenge</h3>
   </div>
 </div>
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-12 col-xs-12">
     <table class="table table-striped">
       <thead>
         <tr>
