--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,14 @@
 <% provide(:title, 'Manage App Users') %>
 
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-12 col-xs-12">
     <p>App users can manage the list of checkpoints, challenges and teams.
     They can also submit scores and add and remove other users.</p>
   </div>
 </div>
 
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-12 col-xs-12">
     <table class="table table-striped">
       <thead>
         <tr>
