--- a/app/views/checkpoints/index.html.erb
+++ b/app/views/checkpoints/index.html.erb
@@ -1,20 +1,20 @@
 <% provide(:title, "Manage Checkpoints") %>
 
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-12 col-xs-12">
     <p>This page contains the list of all checkpoints that have been
        used for Sodbury Challenge.</p>
   </div>
 </div>
 
 <div class="row">
-  <div class="col-md-12 center">
+  <div class="col-md-12 col-xs-12 center">
     <%= will_paginate %>
   </div>
 </div>
 
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-12 col-xs-12">
     <table class="table table-striped">
       <thead>
         <tr>
@@ -39,7 +39,7 @@
 </div>
 
 <div class="row">
-  <div class="col-md-12 center">
+  <div class="col-md-12 col-xs-12 center">
     <%= will_paginate %>
   </div>
 </div>
