--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,13 +17,13 @@
     <div class="container">
       <% flash.each do |message_type, message| %>
         <div class="row vspace">
-          <div class="col-md-12">
+          <div class="col-md-12 col-xs-12">
             <div class="alert alert-<%= message_type %>"><%= message %></div>
           </div>
         </div>
       <% end %>
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12 col-xs-12">
           <h1><%= yield(:title) %></h1>
         </div>
       </div>
