--- a/app/views/static_pages/_public_index.html.erb
+++ b/app/views/static_pages/_public_index.html.erb
@@ -5,7 +5,7 @@
      and route planning.</p>
 </div>
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-12 col-xs-12">
     <div class="panel panel-primary">
       <div class="panel-heading">
         <h4 class="panel-title">Please Note</h4>
@@ -27,12 +27,12 @@
 <% count = 1 %>
 <% @challenges.order(:time_allowed).each do |challenge| %>
 <div class="row vspace">
-  <div class="col-md-12">
+  <div class="col-md-12 col-xs-12">
     <h3><%= challenge.time_allowed %> Hour Challenge</h3>
   </div>
 </div>
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-12 col-sx-12">
     <table class="table table-striped">
       <thead>
         <tr>
