Add scrollbars to tables, fixes X62

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -173,3 +173,11 @@ input {
 .vspace {
   margin-top: 18px;
 }
+
+// Tables
+table {
+  white-space: nowrap;
+}
+.wide-table {
+  overflow: auto;
+}
