--- a/app/views/static_pages/_public_index.html.erb
+++ b/app/views/static_pages/_public_index.html.erb
@@ -5,7 +5,7 @@
      and route planning.</p>
 </div>
 <div class="row">
-  <div class="col-md-12 col-xs-12">
+  <div class="col-md-12 col-xs-12 wide-table">
     <div class="panel panel-primary">
       <div class="panel-heading">
         <h4 class="panel-title">Please Note</h4>
