--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -14,7 +14,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-12 col-xs-12">
+  <div class="col-md-12 col-xs-12 wide-table">
     <table class="table table-striped">
       <thead>
         <tr>
