--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
 </div>
 
 <div class="row">
-  <div class="col-md-12 col-xs-12">
+  <div class="col-md-12 col-xs-12 wide-table">
     <table class="table table-striped">
       <thead>
         <tr>
