Move whitespace to stylesheets

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,15 @@
       <span class="left">Sodbury Challenge <%= Date.current.year %></span>
     </div>
     <div class="col-md-4 col-sm-4 hidden-xs center">
-      <span>&copy; <a href="https://www.joecridge.me/">Joe Cridge</a>, <a href="http://danielswaine.co.uk/">Daniel Swaine</a></span><br /><span><a href="https://raw.githubusercontent.com/danielswaine/SodburyChallenge/master/LICENSE">GPLv3</a>&nbsp;&nbsp;<a href="https://github.com/danielswaine/SodburyChallenge">Source</a></span>
+      <span>
+        &copy; <a href="http://danielswaine.co.uk/">Daniel Swaine</a>
+        &amp; <a href="https://www.joecridge.me/">Joe Cridge</a>
+      </span>
+      <br />
+      <span class="links">
+        <a href="https://raw.githubusercontent.com/danielswaine/SodburyChallenge/master/LICENSE">GPLv3</a>
+        <a href="https://github.com/danielswaine/SodburyChallenge">Source</a>
+      </span>
     </div>
     <div class="col-md-4 col-sm-4 hidden-xs">
       <nav>
@@ -15,16 +23,23 @@
         </ul>
       </nav>
     </div>
-    <div class="visible-xs-block col-xs-12 vspace center">
-      <%= link_to "Home", root_path %>&nbsp;&nbsp;&nbsp;
-      <%= link_to "About", about_path %>&nbsp;&nbsp;&nbsp;
+    <div class="visible-xs-block col-xs-12 vspace center links">
+      <%= link_to "Home", root_path %>
+      <%= link_to "About", about_path %>
       <%= link_to "Rules", rules_path %>
     </div>
     <div class="visible-xs-block col-xs-12 vspace center">
-      <span>&copy; <a href="https://www.joecridge.me/">Joe Cridge</a>, <a href="http://danielswaine.co.uk/">Daniel Swaine</a></span>
+      <span>
+        &copy; <a href="http://danielswaine.co.uk/">Daniel Swaine</a>
+        &amp; <a href="https://www.joecridge.me/">Joe Cridge</a>
+      </span>
     </div>
     <div class="visible-xs-block col-xs-12 center">
-      <span><a href="https://raw.githubusercontent.com/danielswaine/SodburyChallenge/master/LICENSE">GPLv3</a>&nbsp;&nbsp;<a href="https://github.com/danielswaine/SodburyChallenge">Source</a></span>
+      <span class="links">
+        <a href="https://raw.githubusercontent.com/danielswaine/SodburyChallenge/master/LICENSE">GPLv3</a>
+        <a href="https://github.com/danielswaine/SodburyChallenge">Source</a>
+      </span>
     </div>
+    <br />
   </div>
 </footer>
