--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -87,6 +87,7 @@ ol li {
 // Footer
 footer {
   margin-top: 45px;
+  padding-bottom: 25px;
   padding-top: 5px;
   border-top: 1px solid $gray-medium-light;
   color: $gray-light;
