--- a/app/views/challenges/_challenge.html.erb
+++ b/app/views/challenges/_challenge.html.erb
@@ -2,5 +2,13 @@
   <td><%= challenge.date.strftime("%-d %B %Y") %></td>
   <td><%= challenge.time_allowed %> hours</td>
   <td><%= challenge.teams.size %></td>
-  <td><%= link_to "Edit", edit_challenge_path(challenge) %></td>
+  <td><%= link_to (challenge.published? && "View") || "Manage", challenge_path(challenge) %></td>
+  <% if challenge.published? %>
+    <!-- Link to view results -->
+  <% else %>
+    <td><%= link_to "Publish", '#',
+      data: { confirm: "Publish results for the #{challenge.time_allowed} hour challenge? " \
+                       "Published routes and scores cannot be edited." } %>
+    </td>
+  <% end %>
 </tr>
