--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -15,7 +15,8 @@
           <th>Challenge Date</th>
           <th>Time Allowed</th>
           <th>Participating Teams</th>
-          <th>Action</th>
+          <th>Route</th>
+          <th>Scores</th>
         </tr>
       </thead>
       <tbody>
