Rename routes -> goals

--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -15,7 +15,7 @@
           <th>Challenge Date</th>
           <th>Time Allowed</th>
           <th>Participating Teams</th>
-          <th>Route</th>
+          <th>Goals</th>
           <th>Scores</th>
         </tr>
       </thead>
