--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -24,7 +24,8 @@
 </div>
 <div class="row vspace">
   <div class="col-md-3 vspace">
-    <%= link_to raw("<span class=\"glyphicon glyphicon-plus\"></span> Add Goal"), new_goal_path, :class=>'btn btn-block btn-success' %>
+    <%= link_to raw("<span class=\"glyphicon glyphicon-plus\"></span> Add Goal"),
+        new_goal_path(challenge: @challenge.id), :class=>'btn btn-block btn-success' %>
   </div>
 </div>
 
