--- a/app/views/goals/new.html.erb
+++ b/app/views/goals/new.html.erb
@@ -22,6 +22,9 @@
 
       <%= f.label :points_value, "Points Value" %>
       <%= f.text_field :points_value, class: 'form-control' %>
+
+      <%= f.label :compulsory, "Compulsory?" %>
+      <%= f.select :compulsory, options_for_select([["No", false], ["Yes", true]], f.object.compulsory), { }, { class: 'form-control' } %>
     </div>
   </div>
   <div class="row">
