--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -16,6 +16,8 @@
           <th>Time Allowed</th>
           <th>Participating Teams</th>
           <th>Goals</th>
+          <th>Points Available</th>
+          <th>Route</th>
           <th>Scores</th>
         </tr>
       </thead>
