--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -48,7 +48,7 @@
   </div>
 </div>
 
-<%= form_for(@challenge) do |f| %>
+<%= form_for @challenge do |f| %>
   <div class="row vspace">
     <div class="col-md-12">
       <%= f.label :bonus_one, "Bonus 1" %>
