--- a/app/views/teams/log.html.erb
+++ b/app/views/teams/log.html.erb
@@ -22,6 +22,13 @@
       <%= f.label :finish_time, "Finish Time" %>
       <%= f.text_field :finish_time, placeholder: "Expected: #{finish_time(@team)}",
           value: @team.finish_time || nil, class: 'form-control' %>
+
+      <%= f.label :forgot_to_phone_in, "Forgot to phone in?" %>
+      <%= f.select :forgot_to_phone_in, options_for_select([["No", false], ["Yes", true]], f.object.forgot_to_phone_in), { }, { class: 'form-control' } %>
+
+      <%= f.label :dropped_out, "Dropped out?" %>
+      <%= f.select :dropped_out, options_for_select([["No", false], ["Yes", true]], f.object.dropped_out), { }, { class: 'form-control' } %>
+
     </div>
   </div>
   <div class="row">
