--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,6 +15,7 @@
             <li><%= link_to "Home", root_path %></li>
             <li><%= link_to "About", about_path %></li>
             <li><%= link_to "Rules", rules_path %></li>
+            <li><%= link_to "Results", results_path %></li>
 
             <% if logged_in? %>
               <li class="dropdown">
