--- a/app/views/static_pages/_private_results.html.erb
+++ b/app/views/static_pages/_private_results.html.erb
@@ -5,30 +5,108 @@
      <%= link_to "publish them", challenges_path %>.</p>
 </div>
 
-<% count = 1 %>
 <% @challenges.order(:time_allowed).each do |challenge| %>
-<div class="row vspace">
-  <div class="col-md-12 col-xs-12">
-    <h3><%= challenge.time_allowed %> Hour Challenge</h3>
+  <% scout_teams = challenge.teams.where(group: 0).where(disqualified: false) %>
+  <% explorer_teams = challenge.teams.where(group: 1).where(disqualified: false) %>
+  <% non_competetive_teams = challenge.teams.where(group: 2).where(disqualified: false) %>
+  <% disqualified_teams = challenge.teams.where(disqualified: true) %>
+  <div class="row vspace">
+    <div class="col-md-12 col-xs-12">
+      <h2><%= challenge.time_allowed %> Hour Challenge</h2>
+      <hr />
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="col-md-12 col-xs-12 wide-table">
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th>Team Number</th>
-          <th>Name</th>
-          <th>Group</th>
-          <th>Start Time</th>
-          <th>Phone In Time</th>
-          <th>Finish Time</th>
-          <th>Status</th>
-        </tr>
-      </thead>
-      <tbody>
-      </tbody>
-    </table>
+  <div class="row vspace">
+    <div class="col-md-12 col-xs-12">
+      <h3>Scouts</h3>
+    </div>
   </div>
-</div>
+  <div class="row vspace">
+    <div class="col-md-12 col-xs-12 wide-table">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>Position</th>
+            <th>Team</th>
+            <th>Score</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% position = 1 %>
+          <% scout_teams.order(:score).each do |team| %>
+            <tr>
+              <td><%= position.ordinalize %></td>
+              <td><%= team.name %></td>
+              <td><%= team.score %></td>
+              <% position += 1 %>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <div class="row vspace">
+    <div class="col-md-12 col-xs-12">
+      <h3>Explorers</h3>
+    </div>
+  </div>
+  <div class="row vspace">
+    <div class="col-md-12 col-xs-12 wide-table">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>Position</th>
+            <th>Team</th>
+            <th>Score</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% position = 1 %>
+          <% explorer_teams.order(:score).each do |team| %>
+            <tr>
+              <td><%= position.ordinalize %></td>
+              <td><%= team.name %></td>
+              <td><%= team.score %></td>
+              <% position = 1 %>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <div class="row vspace">
+    <div class="col-md-12 col-xs-12">
+      <h3>Non Competetive</h3>
+    </div>
+  </div>
+  <div class="row vspace">
+    <div class="col-md-12 col-xs-12 wide-table">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>Position</th>
+            <th>Team</th>
+            <th>Score</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% non_competetive_teams.order(:score).each do |team| %>
+            <tr>
+              <td>&nbsp;&ndash;</td>
+              <td><%= team.name %> (N/C)</td>
+              <td><%= team.score %></td>
+            </tr>
+          <% end %>
+          <% disqualified_teams.order(:score).each do |team| %>
+            <tr>
+              <td>&nbsp;&ndash;</td>
+              <td><%= team.name %> (Disqualified)</td>
+              <td><%= team.score %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <br />
 <% end %>
