--- a/app/views/static_pages/_private_results.html.erb
+++ b/app/views/static_pages/_private_results.html.erb
@@ -67,7 +67,7 @@
               <td><%= position.ordinalize %></td>
               <td><%= team.name %></td>
               <td><%= team.score %></td>
-              <% position = 1 %>
+              <% position += 1 %>
             </tr>
           <% end %>
         </tbody>
