--- a/app/views/static_pages/_public_results.html.erb
+++ b/app/views/static_pages/_public_results.html.erb
@@ -5,7 +5,7 @@
 </div>
 
 <% @challenges.order(:time_allowed).each do |challenge| %>
-  <% if challenge.published? %>
+  <% if challenge.published? && challenge.teams.size > 0 %>
     <% scout_teams = challenge.teams.where(group: 0).where(disqualified: false) %>
     <% explorer_teams = challenge.teams.where(group: 1).where(disqualified: false) %>
     <% non_competetive_teams = challenge.teams.where(group: 2).where(disqualified: false) %>
@@ -16,98 +16,104 @@
         <hr />
       </div>
     </div>
-    <div class="row vspace">
-      <div class="col-md-12 col-xs-12">
-        <h3>Scouts</h3>
+    <% if scout_teams.size > 0 %>
+      <div class="row vspace">
+        <div class="col-md-12 col-xs-12">
+          <h3>Scouts</h3>
+        </div>
       </div>
-    </div>
-    <div class="row vspace">
-      <div class="col-md-12 col-xs-12 wide-table">
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <th>Position</th>
-              <th>Team</th>
-              <th>Score</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% position = 1 %>
-            <% scout_teams.order(:score).each do |team| %>
+      <div class="row vspace">
+        <div class="col-md-12 col-xs-12 wide-table">
+          <table class="table table-striped">
+            <thead>
               <tr>
-                <td><%= position.ordinalize %></td>
-                <td><%= team.name %></td>
-                <td><%= team.score %></td>
-                <% position += 1 %>
+                <th>Position</th>
+                <th>Team</th>
+                <th>Score</th>
               </tr>
-            <% end %>
-          </tbody>
-        </table>
+            </thead>
+            <tbody>
+              <% position = 1 %>
+              <% scout_teams.order(:score).each do |team| %>
+                <tr>
+                  <td><%= position.ordinalize %></td>
+                  <td><%= team.name %></td>
+                  <td><%= team.score %></td>
+                  <% position += 1 %>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
       </div>
-    </div>
-    <div class="row vspace">
-      <div class="col-md-12 col-xs-12">
-        <h3>Explorers</h3>
+    <% end %>
+    <% if explorer_teams.size > 0 %>
+      <div class="row vspace">
+        <div class="col-md-12 col-xs-12">
+          <h3>Explorers</h3>
+        </div>
       </div>
-    </div>
-    <div class="row vspace">
-      <div class="col-md-12 col-xs-12 wide-table">
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <th>Position</th>
-              <th>Team</th>
-              <th>Score</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% position = 1 %>
-            <% explorer_teams.order(:score).each do |team| %>
+      <div class="row vspace">
+        <div class="col-md-12 col-xs-12 wide-table">
+          <table class="table table-striped">
+            <thead>
               <tr>
-                <td><%= position.ordinalize %></td>
-                <td><%= team.name %></td>
-                <td><%= team.score %></td>
-                <% position += 1 %>
+                <th>Position</th>
+                <th>Team</th>
+                <th>Score</th>
               </tr>
-            <% end %>
-          </tbody>
-        </table>
+            </thead>
+            <tbody>
+              <% position = 1 %>
+              <% explorer_teams.order(:score).each do |team| %>
+                <tr>
+                  <td><%= position.ordinalize %></td>
+                  <td><%= team.name %></td>
+                  <td><%= team.score %></td>
+                  <% position += 1 %>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
       </div>
-    </div>
-    <div class="row vspace">
-      <div class="col-md-12 col-xs-12">
-        <h3>Non Competetive</h3>
+    <% end %>
+    <% if (non_competetive_teams.size + disqualified_teams.size) > 0 %>
+      <div class="row vspace">
+        <div class="col-md-12 col-xs-12">
+          <h3>Non Competetive</h3>
+        </div>
       </div>
-    </div>
-    <div class="row vspace">
-      <div class="col-md-12 col-xs-12 wide-table">
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <th>Position</th>
-              <th>Team</th>
-              <th>Score</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% non_competetive_teams.order(:score).each do |team| %>
+      <div class="row vspace">
+        <div class="col-md-12 col-xs-12 wide-table">
+          <table class="table table-striped">
+            <thead>
               <tr>
-                <td>&nbsp;&ndash;</td>
-                <td><%= team.name %> (N/C)</td>
-                <td><%= team.score %></td>
+                <th>Position</th>
+                <th>Team</th>
+                <th>Score</th>
               </tr>
-            <% end %>
-            <% disqualified_teams.order(:score).each do |team| %>
-              <tr>
-                <td>&nbsp;&ndash;</td>
-                <td><%= team.name %> (Disqualified)</td>
-                <td><%= team.score %></td>
-              </tr>
-            <% end %>
-          </tbody>
-        </table>
+            </thead>
+            <tbody>
+              <% non_competetive_teams.order(:score).each do |team| %>
+                <tr>
+                  <td>&nbsp;&ndash;</td>
+                  <td><%= team.name %> (N/C)</td>
+                  <td><%= team.score %></td>
+                </tr>
+              <% end %>
+              <% disqualified_teams.order(:score).each do |team| %>
+                <tr>
+                  <td>&nbsp;&ndash;</td>
+                  <td><%= team.name %> (Disqualified)</td>
+                  <td><%= team.score %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
       </div>
-    </div>
-    <br />
+      <br />
+    <% end %>
   <% end %>
 <% end %>
