Make it easier to change team times

--- a/app/assets/stylesheets/teams.scss
+++ b/app/assets/stylesheets/teams.scss
@@ -12,3 +12,16 @@
     }
   }
 }
+
+.actual {
+  color: #333;
+  a {
+    &,
+    &:link,
+    &:visited,
+    &:hover {
+      color: #333;
+      cursor: default;
+    }
+  }
+}
