Autorefresh some pages

--- a/app/views/static_pages/_private_index.html.erb
+++ b/app/views/static_pages/_private_index.html.erb
@@ -1,3 +1,7 @@
+<% content_for :head do %>
+  <meta http-equiv="refresh" content="60">
+<% end %>
+
 <div class="jumbotron center">
   <h1>Team Status</h1>
   <br />
