--- a/app/views/static_pages/_public_results.html.erb
+++ b/app/views/static_pages/_public_results.html.erb
@@ -1,3 +1,7 @@
+<% content_for :head do %>
+  <meta http-equiv="refresh" content="600">
+<% end %>
+
 <div class="jumbotron center">
   <h1>Official Results <%= Time.now.year %></h1>
   <br />
