--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
-  <body>
+  <body<%= yield(:body_attributes) %>>
     <%= render 'layouts/header' %>
     <div class="container">
       <% flash.each do |message_type, message| %>
