--- a/app/views/static_pages/_public_index.html.erb
+++ b/app/views/static_pages/_public_index.html.erb
@@ -1,6 +1,7 @@
 <% content_for :head do %>
   <meta http-equiv="refresh" content="600">
 <% end %>
+<%= content_for(:body_attributes) do %> data-no-turbolink <% end %>
 
 <div class="jumbotron center">
   <h1>Official Start Times</h1>
