--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -14,6 +14,7 @@
           <th>Grid Reference</th>
           <th>Points Value</th>
           <th>Compulsory?</th>
+          <th>Start Point?</th>
           <th colspan="2">Actions</th>
         </tr>
       </thead>
