--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -28,24 +28,69 @@
       <%= f.text_field :planned_start_time, placeholder: 'e.g. 18:00', class: 'form-control' %>
     </div>
   </div>
+
   <div class="row">
     <div class="col-md-3 col-md-offset-3 vspace">
       <%= f.submit :class=>'btn btn-primary' %>
     </div>
+
     <div class="col-md-3 vspace">
       <%= link_to "Cancel", teams_path, :class=>'btn btn-block btn-default' %>
     </div>
   </div>
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3 vspace">
-      <hr />
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3 vspace">
-      <%= link_to "Delete Team", @team, method: :delete,
-        data: { confirm: "Delete team? This cannot be undone." },
-        :class=>'btn btn-group-justified btn-danger' %>
-    </div>
-  </div>
 <% end %>
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3 vspace">
+    <hr />
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <h3>Team Members</h3>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3 wide-table">
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th colspan="2">Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @members.each do |member| %>
+          <tr>
+            <td><%= member.name %></td>
+            <td><%= link_to "Edit", edit_member_path(member.id) %></td>
+            <td><%= link_to "Delete", Member.find(member.id), method: :delete %></td>
+          </tr>
+        <% end %>
+      <tbody>
+    </table>
+  </div>
+</div>
+
+<div class="row vspace">
+  <div class="col-md-3 col-md-offset-3">
+    <%= link_to raw("<span class=\"glyphicon glyphicon-plus\"></span> Add Member"),
+        new_member_path(team: @team.id), :class=>'btn btn-block btn-success' %>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3 vspace">
+    <hr />
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3 vspace">
+    <%= link_to "Delete Team", @team, method: :delete,
+      data: { confirm: "Delete team? This cannot be undone." },
+      :class=>'btn btn-group-justified btn-danger' %>
+  </div>
+</div>
