--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -79,6 +79,9 @@
     <%= link_to raw("<span class=\"glyphicon glyphicon-plus\"></span> Add Member"),
         new_member_path(team: @team.id), :class=>'btn btn-block btn-success' %>
   </div>
+  <div class="col-md-3">
+    <%= link_to raw("<span class=\"glyphicon glyphicon-circle-arrow-down\"></span> Download Certificates"), edit_team_path(@team, format: :pdf), :class=>'btn btn-block btn-default' %>
+  </div>
 </div>
 
 <div class="row">
