--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -103,11 +103,10 @@
       </div>
 
       <div class="row vspace">
-        <div class="col-md-6">
-          <%= link_to raw("<span class=\"glyphicon glyphicon-plus\"></span> Add Member"),
-              new_member_path(team: @team.id), :class=>'btn btn-block btn-success' %>
+        <div class="col-md-6 vspace">
+          <%= link_to raw("<span class=\"glyphicon glyphicon-plus\"></span> Add Member"), new_member_path(team: @team.id), :class=>'btn btn-block btn-success' %>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 vspace">
           <%= link_to raw("<span class=\"glyphicon glyphicon-circle-arrow-down\"></span> Download Certificates"), edit_team_path(@team, format: :pdf), :class=>'btn btn-block btn-default' %>
         </div>
       </div>
